rota delete swagger
